<resources>
    <string name="app_name">Portafolio de Juan Carlos</string>
    <string name="inicio">Inicio</string>
    <string name="politica">Política</string>
    <string name="v_list">Mís trabajos</string>
    <string name="name" translatable="false">Juan Carlos Macías Salvador</string>
    <string name="localidad" translatable="false">Madrid</string>
    <string name="telefono" translatable="false">618309775</string>
    <string name="email" translatable="false">juancmaciassalvador@gmail.com</string>
    <string name="linkedin" translatable="false">https://www.linkedin.com/in/juancarlosmacias/</string>
    <string name="github" translatable="false">https://github.com/juancmacias</string>
    <string name="porfolio" translatable="false">https://www.juancarlosmacias.es/</string>
    <string name="titulo">Contactar con Juan Carlos</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo electrónico</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="enviado">Mensaje enviado correctamente</string>
    <string name="notenviado">Parece que algo no va bien</string>
    <string name="noenviado">Por favor completa todos los campos</string>
    <string name="contact">Contactar</string>
    <string name="app_keywords">programador,full stack,metaverso,realidad aumentada,realidad virtual,full-stack,chat gpt,inglés,alemán,MLOps,ml,SML,juan carlos macías</string>
    <string name="app_description">Desarrollador Full Stack y especialista en MLOps con experiencia en sectores como salud, electrónica y startups.</string>
    <string name="valorar">Valorame</string>
</resources>